--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     </div>
 
     <div class="top">
-        <div class="top-image"></div>
+        <div class="top-image">
+            <img src="img/preview.png" alt="photo promo">
+        </div>
         <div class="top-title">
             <h1 class="top-title-txt">THE BRAND <br>
                 <span class="top-title-txt__size">OF LUXERIOUS <span class="top-title-txt__color">FASHION</span></span></h1>
@@ -148,7 +150,21 @@
                         </div>
                     </div>
             </li>
+            <li class="product-list-item__bgc">
+                <div class="product-list-item">
+                    <div class="product-list-item">
+                        <img src="img/img6.jpg" alt="" class="product-list-item-img">
+                        <div class="product-list-item-description">
+                            <h3 class="product-list-item-description-title">ELLERY X M'O CAPSULE</h3>
+                            <p class="product-list-item-description-txt">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams b up with Moda Operandi.</p>
+                            <h3 class="product-list-item-description-price">$52.00</h3>
+                        </div>
+                    </div>
+            </li>
+        </ul>
+        <button class="product-browse center">Browse f Product</button>
 
+    </div>
     </div>
 </body>
 
